--- a/src/app/pages/allschedules/allschedules.component.scss
+++ b/src/app/pages/allschedules/allschedules.component.scss
@@ -3,13 +3,10 @@
     background: linear-gradient(-15deg, #0D9BFF 0, #2C3FFF 100%) !important;
 }
 
-.bg-gradient-custom-icon-danger
-{
-    background: linear-gradient(-15deg, #0D9BFF 0, #2C3FFF 100%) !important;
-    margin-top: 13px;
-}
-
-
 .fa{
   color: rgb(255, 255, 255);
+}
+
+.espacamento{
+  padding-left: 15px;
 }
