--- a/src/app/pages/icons/icons.component.html
+++ b/src/app/pages/icons/icons.component.html
@@ -13,8 +13,8 @@
                   <span class="h2 font-weight-bold mb-0">{{clock}}</span>
                 </div>
                 <div class="col-auto">
-                  <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
-                    <i (click)="buttonTime(id)" class="ni ni-bell-55" style="cursor: pointer;"></i>
+                    <div class="icon icon-shape bg-gradient-custom-icon-danger rounded-circle shadow">
+                    <i  (click)="buttonTime(id)"   class="far fa-clock fa"  style="cursor: pointer;" ></i>
                   </div>
                 </div>
               </div>
