--- a/src/app/pages/allschedules/allschedules.component.html
+++ b/src/app/pages/allschedules/allschedules.component.html
@@ -44,9 +44,8 @@
 
                 </div>
                 <div class="col-auto">
-                  <div class="icon icon-shape bg-gradient-custom-danger rounded-circle shadow">
-                    <i  (click)="getAllSchendulesMothYear(id,year,month)" class="fas fa-bell fa" style="cursor: pointer;" ></i>
-
+                  <div class="icon icon-shape bg-gradient-custom-icon-danger rounded-circle shadow">
+                    <i  (click)="getAllSchendulesMothYear(id,year,month)" class="fas fa-search fa" style="cursor: pointer;" ></i>
                   </div>
                 </div>
               </div>
@@ -121,9 +120,6 @@
           <div class="row align-items-center">
             <div class="col">
               <h3 class="mb-0">Controle de Ponto</h3>
-            </div>
-            <div class="col text-right">
-              <a href="#/allschedules" class="btn btn-sm btn-primary">Ver todos</a>
             </div>
           </div>
         </div>
