--- a/src/app/pages/allschedules/allschedules.component.scss
+++ b/src/app/pages/allschedules/allschedules.component.scss
@@ -3,6 +3,12 @@
     background: linear-gradient(-15deg, #0D9BFF 0, #2C3FFF 100%) !important;
 }
 
+.bg-gradient-custom-icon-danger
+{
+    background: linear-gradient(-15deg, #0D9BFF 0, #2C3FFF 100%) !important;
+    margin-top: 9px;
+}
+
 .fa{
   color: rgb(255, 255, 255);
 }
